...
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/registerNow"
        android:text="SIGN UP FOR FREE"
        android:textStyle=""
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
